--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<link href="https://csdnimg.cn/public/favicon.ico" rel="SHORTCUT ICON">-->
     <title>transfer</title>
+
   </head>
   <body>
     <div id="app"></div>
